# cubrid

./: CMakeLists.txt
core/: CMakeLists.txt
cs/: CMakeLists.txt
cubrid/: CMakeLists.txt
msg/: CMakeLists.txt
sa/: CMakeLists.txt
src/base/: server_type.cpp  system_parameter.c  system_parameter.h
src/communication/: communication_channel.cpp  request_client_server.cpp  request_client_server.hpp
src/connection/: connection_support.c  server_support.c
src/core/: cubrid_getopt.h  cubrid_getopt_long.c
src/monitor/: monitor_multidim.cpp  monitor_multidim.hpp
src/server/: active_tran_server.cpp  active_tran_server.hpp  ats_ps_request.hpp  page_server.cpp  page_server.hpp
src/transaction/: log_append.cpp  log_impl.h  log_prior_send.cpp  log_recovery.c  recovery.h
tools/: CMakeLists.txt
unit_tests/log_transfer/: test_main_prior_list_serialize.cpp  test_main_prior_sendrecv.cpp
unit_tests/monitor/: test_monitor_main.cpp
unit_tests/request_client_server/: test_main.cpp
util/: CMakeLists.txt
win/cubridcs/: cubridcs.def
